src/main/java/com/example/projectrserver/global/error/custom/ErrorResponse.java
package com.example.projectrserver.global.error.custom;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@Builder
@AllArgsConstructor
public class ErrorResponse {
    private int status;
    private String message;
}